@startuml

entity "User" {
  * id: int
  * username: str
  * password_hash: str
  * nickname: str
  * email: str
  * status: int
  * avatar: str
  * bio: str
  * created_at: datetime
}

entity "Follow" {
  * id: int
  * following_id: int
  * follower_id: int
}

entity "Post" {
  * id: int
  * description: str
  * created_at: datetime
  * updated_at: datetime
  --
  * user_id: int
}

entity "Attachment" {
  * id: int
  * name: str
  * size(byte): int
  * url: str
  --
  * post_id: int
}

User ||--o{ Post
User }|--|{ Follow
Post ||--|| Attachment

@enduml
